Quick: Add missing page_type_class block

--- a/taccsite_cms/templates/base.html
+++ b/taccsite_cms/templates/base.html
@@ -53,7 +53,7 @@
   {% render_block "css" %}
 </head>
 
-<body class="o-site">
+<body class="o-site  {% block page_type_class %}{% endblock page_type_class %}">
   {% cms_toolbar %}
 
   <!-- Custom Navigation Block per Site to Customize the Site Header Branding. -->
