GL-50: Restore logic to highlight active nav link

--- a/taccsite_cms/templates/cms_menu.html
+++ b/taccsite_cms/templates/cms_menu.html
@@ -5,7 +5,7 @@
 {# SEE: https://github.com/jrief/djangocms-bootstrap/blob/aa74994/cms_bootstrap/templates/bootstrap4/menu/navbar.html #}
 {% spaceless %}
 {% for child in children %}
-<li class="nav-item{% if child.selected or child.ancestor %} active{% endif %}{% if child.children %} dropdown{% endif %}">
+<li class="nav-item{% if child.selected or child.ancestor or request.get_full_path == child.url %} active{% endif %}{% if child.children %} dropdown{% endif %}">
 	{% if child.is_leaf_node %}
 	<a class="nav-link" href="{{ child.attr.redirect_url|default:child.get_absolute_url }}">
 		{{ child.get_menu_title|safe }}
