--- a/taccsite_cms/templates/cms_menu.html
+++ b/taccsite_cms/templates/cms_menu.html
@@ -5,16 +5,17 @@
 {# SEE: https://github.com/jrief/djangocms-bootstrap/blob/aa74994/cms_bootstrap/templates/bootstrap4/menu/navbar.html #}
 {% spaceless %}
 {% for child in children %}
-<li class="nav-item{% if child.selected or child.ancestor or request.get_full_path == child.url %} active{% endif %}{% if child.children %} dropdown{% endif %}">
+{% with child_url=child.attr.redirect_url|default:child.get_absolute_url child_title=child.get_menu_title|safe %}
+<li class="nav-item{% if child.selected or child.ancestor or request.get_full_path == child_url %} active{% endif %}{% if child.children %} dropdown{% endif %}">
 	{% if child.is_leaf_node %}
-	<a class="nav-link" href="{{ child.attr.redirect_url|default:child.get_absolute_url }}">
-		{{ child.get_menu_title|safe }}
+	<a class="nav-link" href="{{ child_url }}">
+		{{ child_title }}
 		<span class="sr-only">(current)</span>
 	</a>
 	{% else %}
   <span class="nav-link">
-    <a href="{{ child.attr.redirect_url|default:child.get_absolute_url }}">
-      {{ child.get_menu_title|safe }}
+    <a href="{{ child_url }}">
+      {{ child_title }}
     </a>
     <a
       href=""
@@ -30,12 +31,15 @@
       recursion has been dropped intentionally. Read https://github.com/twbs/bootstrap/pull/6342 for details.
       {% endcomment %}
       {% for grandchild in child.children %}
-      <a class="dropdown-item{% if grandchild.selected %} active{% endif %}" href="{{ grandchild.attr.redirect_url|default:grandchild.get_absolute_url }}" role="menuitem">
+      {% with grandchild_url=grandchild.attr.redirect_url|default:grandchild.get_absolute_url grandchild_title=grandchild.get_menu_title|safe %}
+      <a class="dropdown-item{% if grandchild.selected %} active{% endif %}" href="{{ grandchild_url }}" role="menuitem">
         {{ grandchild.get_menu_title|safe }}
       </a>
+      {% endwith %}
       {% endfor %}
   </span>
 	{% endif %}
 </li>
+{% endwith %}
 {% endfor %}
 {% endspaceless %}
