--- a/taccsite_cms/static/site_cms/css/src/_imports/branding_logos.css
+++ b/taccsite_cms/static/site_cms/css/src/_imports/branding_logos.css
@@ -10,32 +10,41 @@
 
 /* Branding Selectors  */
 
-.branding-header {
-  margin: 0;
-  padding: 6.4px 0 6.4px; /* NO-R/EM: 0.4rem 0 0.4rem */
-  text-align: center;
+.c-branding {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+
+  height: 50px;
+
   background-color: rgb(51, 51, 51);
   color: #fff;
+
   border-bottom: 1px solid #aaa;
 }
 
-.branding-header a {
-  display: inline-block;
+/* FAQ: This ruleset is only necessary for successive `.c-branding__link`'s,
+        but applying it to all `.c-branding__link`'s ensures consitent layout */
+.c-branding__link {
+  display: flex; /* FAQ: Allow `::before` to stretch */
+  align-items: center;
+  justify-content: center;
 }
+.c-branding__link + .c-branding__link::before {
+  display: flex;
+  content: '';
+  height: 24px;
 
-.branding-seperator {
-  width: 1px;
-  height: 100%;
+  margin-left: 15px;
+  margin-right: 15px;
+
   border-left: solid 1px #fff;
-  margin: 0 15px;
-  vertical-align: middle;
 }
 
-.branding-logo {
-  height: 30px;
-  margin: 0;
-  padding: 0;
-  border: none;
+.c-branding__link,
+.c-branding__image {
+  height: 100%;
 }
 
 /* Specific Brand Logo Selectors  */
@@ -43,15 +52,9 @@
 .branding-nsf {
   height: 35px;
 }
-
-.branding-tacc {
-  height: 24px;
-  margin: 3px 0 0 0;
-}
-
+.branding-tacc,
 .branding-utaustin {
   height: 24px;
-  margin: 3px 0 0 0;
 }
 
 /* Logo Selectors  */
