--- a/taccsite_cms/templates/branding.html
+++ b/taccsite_cms/templates/branding.html
@@ -5,22 +5,14 @@
 
 {% with settings.BRANDING as branding %}
 <!-- Sponsor Logos -->
-<div class="branding-header">
+<div id="header-branding" class="c-branding">
   {# DEBUG: #}{# <code>{{ branding|first }}</code> #}
   {% for brand in branding %}
     {% with filename=brand|index:1 selectors=brand|index:2 targeturl=brand|index:3 targetType=brand|index:4 accessibility=brand|index:5 corstype=brand|index:6 visibility=brand|index:7 %}
       {% if visibility == "True" %}
-        {% if brand == branding|first %}
-        <a href="{{ targeturl }}" target="{{ targettype }}">
-          <img class="branding-logo {{ selectors }}" src="{% static filename %}" crossorigin="{{ corstype }}" alt="{{ accessibility }}" >
+        <a href="{{ targeturl }}" target="{{ targettype }}" class="c-branding__link">
+          <img class="c-branding__image {{ selectors }}" src="{% static filename %}" crossorigin="{{ corstype }}" alt="{{ accessibility }}" >
         </a>
-        {% elif brand != branding|first %}
-        {# RFE: Use CSS to remove the need for `.branding-seperator` and `if` logic #}
-        <span class="branding-seperator"></span>
-        <a href="{{ targeturl }}" target="{{ targettype }}">
-          <img class="branding-logo {{ selectors }}" src="{% static filename %}" crossorigin="{{ corstype }}" alt="{{ accessibility }}" >
-        </a>
-        {% endif %}
       {% endif %}
     {% endwith %}
   {% endfor %}
