--- a/taccsite_cms/templates/header.html
+++ b/taccsite_cms/templates/header.html
@@ -1,33 +1,46 @@
-{# WARNING: Some markup is duplicated in other repositories #}
+{# @var className, hasPortal, settings #}
+{# NOTE: Includes assume specific file paths; blocks allow explicit paths #}
+{# !!!: Includes assume CMS `settings`, but exclusion breaks nothing… right?! #}
+
+{# WARNING: This markup is duplicated in other repositories #}
 {# SEE: https://confluence.tacc.utexas.edu/x/LoCnCQ #}
-{# FAQ: Extra lines exist to ease CMS/Portal/Guide template comparison #}
+<header class="{{className}}" id="core-header">
 
-<!-- Sponsor Logos -->
-{% include "header_branding.html" %}
+  {% block header_branding %}
+    {% include "./header_branding.html" with brands=settings.BRANDING only %}
+  {% endblock header_branding %}
 
-<!-- Navigation Bar -->
-<nav id="s-header" class="s-header  navbar {% if settings.PORTAL %}navbar-expand-xl{% else %}navbar-expand-lg{% endif %} navbar-dark">
-  <!-- Portal Logo -->
-  {% include "header_logo.html" %}
+  <nav id="s-header" class="
+    s-header
+    navbar navbar-dark
+    {% if hasPortal %}navbar-expand-xl{% else %}navbar-expand-lg{% endif %}">
+    <!-- Portal Logo -->
+    {% block header_logo %}
+      {% include "./header_logo.html" with logo=settings.LOGO only %}
+    {% endblock header_logo %}
 
-  <!-- Navbar Accordian Toggle on Small Screens  -->
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExpandTarget" aria-controls="navbarsExpandTarget" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+    <!-- Navbar Accordian Toggle on Small Screens  -->
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExpandTarget" aria-controls="navbarsExpandTarget" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
 
-  <!-- Navbar Links -->
-  <div class="collapse navbar-collapse" id="navbarsExpandTarget">
-    {# GL-6: Remove need for different `className` values #}
-    {% if settings.PORTAL %}
-      {# FAQ: If template were included with `only`, then it would NOT render `show_menu` #}
-      {% include "nav_cms.html" with className="navbar-nav" %}
+    <!-- Navbar Links -->
+    <div class="collapse navbar-collapse" id="navbarsExpandTarget">
+      {% block nav_cms %}
+        {# FAQ: Must NOT use `only` or else `show_menu` fails to render #}
+        {% include "./nav_cms.html" with className="navbar-nav" hasPortal=hasPortal %}
+      {% endblock nav_cms %}
 
-      {# NOTE: As of 2020-12, search is only available with a Portal #}
-      {% include "nav_search.html" with className="form-inline  ml-auto" only %}
-      {% include "nav_portal.html" with className="navbar-nav" settings=settings only %}
-    {% else %}
-      {# FAQ: If template were included with `only`, then it would NOT render `show_menu` #}
-      {% include "nav_cms.html" with className="navbar-nav  ml-auto" %}
-    {% endif %}
-  </div>
-</nav>
+      {% if hasPortal %}
+        {% block nav_search %}
+          {% include "./nav_search.html" with className="form-inline  ml-auto" only %}
+        {% endblock nav_search %}
+
+        {% block nav_portal %}
+          {% include "./nav_portal.html" with className="navbar-nav" portalLinksAuth=settings.PORTAL_AUTH_LINKS portalLinksAnon=settings.PORTAL_UNAUTH_LINKS only %}
+        {% endblock nav_portal %}
+      {% endif %}
+    </div>
+  </nav>
+
+</header>
