--- a/taccsite_cms/templates/nav_portal.html
+++ b/taccsite_cms/templates/nav_portal.html
@@ -1,5 +1,5 @@
 {% load static %}
-{# @var className #}
+{# @var className, portalLinksAuth, portalLinksAnon #}
 
 {# WARNING: Some markup is duplicated in other repositories #}
 {# SEE: https://confluence.tacc.utexas.edu/x/LoCnCQ #}
@@ -21,7 +21,7 @@
       <div class="dropdown-menu dropdown-menu-right"
         aria-labelledby="auth-menu-button"
         id="auth-menu-list">
-        {% for link in settings.PORTAL_AUTH_LINKS %}
+        {% for link in portalLinksAuth %}
           <a id="auth-menu-link-{{ link.name }}"
             class="dropdown-item"
             href="{{ link.url }}"
@@ -34,7 +34,7 @@
     </li>
   </div>
   <li id="unauth-menu" class="nav-item  d-none">
-    {% for link in settings.PORTAL_UNAUTH_LINKS %}
+    {% for link in portalLinksAnon %}
       <a id="unauth-menu-link-{{ link.name }}"
         class="nav-link"
         href="{{ link.url }}"
