--- a/taccsite_cms/templates/nav_cms.html
+++ b/taccsite_cms/templates/nav_cms.html
@@ -7,5 +7,5 @@
   <!-- All top-level CMS controlled nav elements handled here. -->
   {# Path must be relative to templates' root dir #}
   {# FAQ: If template is included with `only`, then it does NOT render `show_menu` #}
-  {% show_menu 0 100 1 100 "cms_menu.html" %}
+  {% include "nav_cms.raw.html" %}
 </ul>
